実際の認証処理を追加

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "google-auth-library": "^0.9.10",
+    "googleapis": "^14.2.0"
+  }
 }
